# cfunctions

./: .gitignore  AUTHORS  Changes  Makefile  Makefile.in  NEWS  README  VERSION  argument.c  argument.h  backup.c  backup.h  bkbconfig.pl  build.pl  c-extensions.h  c-word.h  cfunctions-0.27.tar.bz2  cfunctions.c  cfunctions.fl  clean.pl  config.h  config.h.in  config.status  configure  configure.ac  configure.ac~  defines.h  defines.h.in  error-msg.c  error-msg.h  file-name.c  file-name.h  file.c  file.h  flex.c  flex.h  options.c  options.h  print-usage.h  sys-or-exit.c  (+5 more)
autom4te.cache/: output.0  requests  traces.0  traces.1
cfunctions-0.26/: Makefile  Makefile.in  README  configure  configure.ac  fake-cfunctions
cfunctions-0.26/doc/: cfunctions.1  cfunctions.html  cfunctions.texi  example.cfunctionsrc  index.html  index.html.in  man.tail
cfunctions-0.26/missing/: README  getopt_long.c  strdup.c  strerror.c  strstr.c
cfunctions-0.26/src/: argument.h  blastfile.pl  cfunctions.fl  file.c  options.c  print_usage.h  sys_or_exit.c  tags.c
cfunctions-0.26/tests/: bad-endif-1.c  hin-test.hin  link-+.c  link-arg.c  link-brace.c  link-cpp.c  link-enum.c  link-local-macro.c  link-verbatim.c  link-void-star.c  ok-+.c  ok-commas.c  ok-cpp.c  ok-enum.c  ok-global-macro.c  ok-local-macro.c  ok-verbatim.c  ok-void-star.c  test.perl.in  warn-braces-2.c  warn-static-1.c
cfunctions-0.27/: Makefile  VERSION  configure  configure.ac
cfunctions-0.27/contrib/: README  emacs-tags.c
cfunctions-0.27/doc/: Makefile.in  cfunctions  cfunctions.1  (+8 more)
contrib/: LSM.in  flexpp.fl
doc/: .gitignore  Makefile  Makefile.in  VERSION  cfunctions.1  cfunctions.html  cfunctions.info  cfunctions.texi  index.html  man.head  man.tail.in  options.texi  version.texi
failures/: function-prototype-nested.c  function-prototype.c  link-typedef-array.c  ok-commas.c  ok-typedef-array.c  othello-play.c  typedef-union-struct.c
newtests/: NewTests.pm  line-numbers.t  struct-enum.c  struct-enum.t
obsolete/: Makefile.in.gmake
src/: .gitignore  Makefile  Makefile.bak  Makefile.in  TAGS  argument.c  argument.h  backup.c  backup.h  blastfile.pl.~1~  c-extensions.h  c-word.c  c-word.h  cfunctions  cfunctions.c  cfunctions.fl  cfunctions.fl.~1~  cfunctions.h  cfunctionsrc.h  config.h  config.h.in  controls.h  cpp.c  cpp.h  cscope.out  dependencies  diff  error-msg.c  error-msg.h  error_msg.c  error_msg.h  error_msg.h.~1~  file-name.c  file-name.h  file.c  file.h  makemakefilein.pl  name-convert.c  name-convert.h  options  (+21 more)
tests/: 1  README  attribute.c  backup-test.c  bad-endif-1.c  bad-global-name-1.c  bad-inline-1.c  bad-options-1.c  delete-attribute.c  link-function-prototype-nested.c  link-function-prototype.c  link-init.c  link-inline.c  link-preproc.c  link-struct.c  link-traditional.c  ok-c-string.c  ok-cpp.c  ok-function-prototype-nested.c  ok-function-prototype.c  ok-inline.c  ok-multi-array.c  ok-pathological-comments.c  ok-preproc.c  ok-struct.c  ok-traditional.c  ok-x.c  spacing.c  test.perl  test.perl.in  test.pl  warn-name-1.c  warn-overflow.c  warn-verbatim.c
util/: make-c-word.c  makemakefilein.pl  remove-debug-macro.pl
(+60 files in other folders)
